syntax = "proto3";

package Testdata;

option go_package = "github.com/Snowflake-Labs/sansshell/proxy/testdata";

message TestRequest {
  string input = 1;
}

message TestResponse {
  string output = 2;
}


service TestService {
  rpc TestUnary(TestRequest) returns (TestResponse) {}
  rpc TestServerStream(TestRequest) returns (stream TestResponse) {}
  rpc TestClientStream(stream TestRequest) returns (TestResponse) {}
  rpc TestBidiStream(stream TestRequest) returns (stream TestResponse) {}
}

// Used to test that services without methods are filtered.
service TestServiceWithoutMethods { }
